# exoplanet_citation

./: .env.example  .gitignore  01-exoplanets.md  02-near-earth-objects.md  03-iss-passes.md  Dockerfile  LICENSE-DATA  Makefile  PLAN.md  PRIVACY.md  README.md  docker-compose.yml  pyproject.toml  rubin-alert-layer-plan.md  vercel.json  vr-experience-plan.md
.github/workflows/: catchup-citations.yml  ci.yml  nightly.yml
api/: host_xyz.py  index.py  models.py  requirements.txt  scene.py  starfield.py
data/: MANIFEST.jsonl
docs/: ARCHITECTURE.md  DATA_CATALOG.md  PROCEDURAL_RENDERING.md  STARFIELD_PLAN.md  THEMING.md
etl/: build_gaia_xyz.py  build_galactic_particles.py  build_starfield.py  check_setup.py  diff.py  enrich_ads.py  enrich_atmospheric_observations.py  enrich_binaries.py  enrich_gaia.py  extract.py  inspect.py  load.py  publish.py  r2.py  resolve_citations.py  schema.sql  smoke_gaia.py  walk_manual_queue.py
etl/migrations/: 001_phase1x_typed_columns.sql  002_phase2_host_stars_gaia.sql  003_fix_planets_current_view.sql  004_discovery_papers.sql  005_citation_graph.sql  006_add_arxiv_resolved_via.sql  007_binary_companions.sql  008_atmospheres.sql  (+2 more)
public/: discoveries.json  health.json  rss.xml
tests/: test_build_gaia_xyz.py  test_build_galactic_particles.py  test_diff.py  test_enrich_gaia.py  test_gaia.py  test_host_xyz.py  test_scene.py  test_starfield.py
vocabularies/: discovery_facility.yaml  discovery_method.yaml  parameter_change_type.yaml
web/: .gitignore  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
(+29 files in other folders)
