[project]
name = "exoplanet_citation"
version = "0.1.0"
description = "A public data warehouse linking confirmed exoplanets to the scientific papers that announced them."
authors = [{ name = "Mark Pernotto", email = "mark@pernotto.com" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12,<3.13"

dependencies = [
    "httpx>=0.27",
    "tenacity>=8.5",
    "pandas>=2.2",
    "pyarrow>=17.0",
    "pillow>=10.4",
    "numpy>=2.0",
    "psycopg[binary]>=3.2",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "boto3>=1.35",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "dbt-postgres>=1.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["etl*", "api*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
